ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
07/14/08 Remi Ricard (papaDoc)
        * Finish adding patch 1336066: Joint feedback in quickstep by jsinecky
        * demo_boxstack.cpp can now print joint feedback

07/11/08 Daniel K. O.
        * Bumped version for 0.10.1
        * Added proper usage of libtool's version info.

07/10/08 Remi Ricard (papaDoc)
        * Add new function dJointSetPistonAnchorOffset
        * Add unittest for the piston joint
        * Fix problem with dJointGetPistonPosition and 
          dJointGetPistonPositionRate when the joint is attached to only
          a body 2. The sign was inversed. 

07/09/08 Remi Ricard (papaDoc)
        * Optimize function Multiply1_12q1 in quickstep
          Patch proposed by Riemer v.d. Zee and modified by Patrick Baggett

07/08/08 Remi Ricard (papaDoc)
        * Update the slider joint to have the same behavior as the other joint
          when there is only a body2 attached to it.
        * Update documentation for the slider joint.
        * Remove warning by using REAL()
        * Add new unittest for dJointGetSliderPositionRate

07/08/08 Remi Ricard (papaDoc)
        * Update unittest for the slider.
        * Rename the new function dJointSetHingeAxisDelta to 
          dJointSetHingeAxisOffset. This remove will remove confusion with 
          the old function dJointSetHingeAnchorDelta
        * Update documentation for the Hinge unittest
        * Remove warning by using REAL()

07/07/08 Daniel K. O.
        * Max Correcting Vel doesn't affect bounciness, as before.

07/03/08 Remi Ricard (papaDoc)
        * Add new function dJointSetHingeAxisDelta
        * Add unittest for this new function
